fix header z-index

--- a/packages/ui-kit/src/components/header/header.module.scss
+++ b/packages/ui-kit/src/components/header/header.module.scss
@@ -1,6 +1,6 @@
 .header {
   position: fixed;
-  z-index: auto;
+  z-index: 10;
   top: 0;
   left: 0;
 
